--- a/celulares.html
+++ b/celulares.html
@@ -1,1 +1,115 @@
-<!DOCTYPE html><html lang="pt-br"><head><title>Informatica</title><link rel="shortcut icon" href="icon.png"><link rel="stylesheet" type="text/css" href="stiloInfo.css"><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"></head><body> <header class="menu"><h1>InfoBR</h1> </header><div class="caixaDep"> <a href="index.html"><div>Home</div></a> <a href="informatica.html"><div>Informática</div></a> <a href="celulares.html"><div class="fixcap">Celulares</div></a></div> <section class="basec"> <article class="ol"> <script type="text/javascript">function function_name(){alert("Bu!");}</script> <figure class="li">Cabo nylon i2go 2m <img src="produt.png"> <a href="" onclick="function_name()"><figcaption>CD-0001 Saber mais...</figcaption></a> </figure> <figure class="li">Cabo nylon i2go 2m <img src="produt.png"> <a href="" onclick="function_name()"><figcaption>CD-0002 Saber mais...</figcaption></a> </figure> <figure class="li">Cabo nylon i2go 2m <img src="produt.png"> <a href="" onclick="function_name()"><figcaption>CD-0003 Saber mais...</figcaption></a> </figure> <figure class="li">Cabo nylon i2go 2m <img src="produt.png"> <a href="" onclick="function_name()"><figcaption>CD-0004 Saber mais...</figcaption></a> </figure> <figure class="li">Cabo nylon i2go 2m <img src="produt.png"> <a href="" onclick="function_name()"><figcaption>CD-0005 Saber mais...</figcaption></a> </figure> <figure class="li">Cabo nylon i2go 2m <img src="produt.png"> <a href="" onclick="function_name()"><figcaption>CD-0006 Saber mais...</figcaption></a> </figure> <figure class="li">Cabo nylon i2go 2m <img src="produt.png"> <a href="" onclick="function_name()"><figcaption>CD-0001 Saber mais...</figcaption></a> </figure> <figure class="li">Cabo nylon i2go 2m <img src="produt.png"> <a href="" onclick="function_name()"><figcaption>CD-0002 Saber mais...</figcaption></a> </figure> <figure class="li">Cabo nylon i2go 2m <img src="produt.png"> <a href="" onclick="function_name()"><figcaption>CD-0003 Saber mais...</figcaption></a> </figure> <figure class="li">Cabo nylon i2go 2m <img src="produt.png"> <a href="" onclick="function_name()"><figcaption>CD-0004 Saber mais...</figcaption></a> </figure> <figure class="li">Cabo nylon i2go 2m <img src="produt.png"> <a href="" onclick="function_name()"><figcaption>CD-0005 Saber mais...</figcaption></a> </figure> <figure class="li">Cabo nylon i2go 2m <img src="produt.png"> <a href="" onclick="function_name()"><figcaption>CD-0006 Saber mais...</figcaption></a> </figure> <figure class="li">Cabo nylon i2go 2m <img src="produt.png"> <a href="" onclick="function_name()"><figcaption>CD-0001 Saber mais...</figcaption></a> </figure> <figure class="li">Cabo nylon i2go 2m <img src="produt.png"> <a href="" onclick="function_name()"><figcaption>CD-0002 Saber mais...</figcaption></a> </figure> <figure class="li">Cabo nylon i2go 2m <img src="produt.png"> <a href="" onclick="function_name()"><figcaption>CD-0003 Saber mais...</figcaption></a> </figure> <figure class="li">Cabo nylon i2go 2m <img src="produt.png"> <a href="" onclick="function_name()"><figcaption>CD-0004 Saber mais...</figcaption></a> </figure> <figure class="li">Cabo nylon i2go 2m <img src="produt.png"> <a href="" onclick="function_name()"><figcaption>CD-0005 Saber mais...</figcaption></a> </figure> <figure class="li">Cabo nylon i2go 2m <img src="produt.png"> <a href="" onclick="function_name()"><figcaption>CD-0006 Saber mais...</figcaption></a> </figure> </article> </section><div class="caixaEntg"> <img src="wallEntg.png"></div> <footer><div><h2>© Alex Souza</h2></div> </footer></body> <script type="text/javascript">function vai(){var gerarUrl=document.getElementById("entraNum").value var mesgOpc=document.getElementById("msgOpc").value var vaurlPta="https://api.whatsapp.com/send?phone=55"+gerarUrl+'&text='+mesgOpc;window.open(vaurlPta);}</script> </html>
+<!DOCTYPE html>
+<html lang="pt-br">
+		<head>
+			<title>Informatica</title>
+			<link rel="shortcut icon" href="icon.png">
+			<link rel="stylesheet" type="text/css" href="stiloInfo.css">
+			<meta charset="utf-8">
+			<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		</head>
+<body>
+	<header class="menu">
+				<h1>InfoBR</h1>
+	</header>
+	<div class="caixaDep">
+		<a href="index.html"><div>Home</div></a>
+		<a href="informatica.html"><div>Informática</div></a>
+		<a href="celulares.html"><div class="fixcap">Celulares</div></a>
+	</div>
+	<section class="basec">
+		<article class="ol">
+						<script type="text/javascript">
+				function function_name() {
+					alert("Bu!");
+				}
+			</script>
+			<figure class="li">Cabo nylon i2go 2m
+				<img src="produt.png"> 
+				<a  href="" onclick="function_name()"><figcaption>CD-0001 Saber mais...</figcaption></a>
+			</figure>
+			<figure class="li">Cabo nylon i2go 2m
+				<img src="produt.png"> 
+				<a  href="" onclick="function_name()"><figcaption>CD-0002 Saber mais...</figcaption></a>
+			</figure>
+			<figure class="li">Cabo nylon i2go 2m
+				<img src="produt.png"> 
+				<a  href="" onclick="function_name()"><figcaption>CD-0003 Saber mais...</figcaption></a>
+			</figure>
+			<figure class="li">Cabo nylon i2go 2m
+				<img src="produt.png"> 
+				<a  href="" onclick="function_name()"><figcaption>CD-0004 Saber mais...</figcaption></a>
+			</figure>
+			<figure class="li">Cabo nylon i2go 2m
+				<img src="produt.png"> 
+				<a  href="" onclick="function_name()"><figcaption>CD-0005 Saber mais...</figcaption></a>
+			</figure>
+			<figure class="li">Cabo nylon i2go 2m
+				<img src="produt.png"> 
+				<a  href="" onclick="function_name()"><figcaption>CD-0006 Saber mais...</figcaption></a>
+			</figure>
+			<figure class="li">Cabo nylon i2go 2m
+				<img src="produt.png"> 
+				<a  href="" onclick="function_name()"><figcaption>CD-0001 Saber mais...</figcaption></a>
+			</figure>
+			<figure class="li">Cabo nylon i2go 2m
+				<img src="produt.png"> 
+				<a  href="" onclick="function_name()"><figcaption>CD-0002 Saber mais...</figcaption></a>
+			</figure>
+			<figure class="li">Cabo nylon i2go 2m
+				<img src="produt.png"> 
+				<a  href="" onclick="function_name()"><figcaption>CD-0003 Saber mais...</figcaption></a>
+			</figure>
+			<figure class="li">Cabo nylon i2go 2m
+				<img src="produt.png"> 
+				<a  href="" onclick="function_name()"><figcaption>CD-0004 Saber mais...</figcaption></a>
+			</figure>
+			<figure class="li">Cabo nylon i2go 2m
+				<img src="produt.png"> 
+				<a  href="" onclick="function_name()"><figcaption>CD-0005 Saber mais...</figcaption></a>
+			</figure>
+			<figure class="li">Cabo nylon i2go 2m
+				<img src="produt.png"> 
+				<a  href="" onclick="function_name()"><figcaption>CD-0006 Saber mais...</figcaption></a>
+			</figure>
+			<figure class="li">Cabo nylon i2go 2m
+				<img src="produt.png"> 
+				<a  href="" onclick="function_name()"><figcaption>CD-0001 Saber mais...</figcaption></a>
+			</figure>
+			<figure class="li">Cabo nylon i2go 2m
+				<img src="produt.png"> 
+				<a  href="" onclick="function_name()"><figcaption>CD-0002 Saber mais...</figcaption></a>
+			</figure>
+			<figure class="li">Cabo nylon i2go 2m
+				<img src="produt.png"> 
+				<a  href="" onclick="function_name()"><figcaption>CD-0003 Saber mais...</figcaption></a>
+			</figure>
+			<figure class="li">Cabo nylon i2go 2m
+				<img src="produt.png"> 
+				<a  href="" onclick="function_name()"><figcaption>CD-0004 Saber mais...</figcaption></a>
+			</figure>
+			<figure class="li">Cabo nylon i2go 2m
+				<img src="produt.png"> 
+				<a  href="" onclick="function_name()"><figcaption>CD-0005 Saber mais...</figcaption></a>
+			</figure>
+			<figure class="li">Cabo nylon i2go 2m
+				<img src="produt.png"> 
+				<a  href="" onclick="function_name()"><figcaption>CD-0006 Saber mais...</figcaption></a>
+			</figure>
+		</article>
+	</section>
+	<div class="caixaEntg">
+			<img src="wallEntg.png">
+	</div>
+	<footer>
+		<div><h2>© Alex Souza</h2></div>
+	</footer>
+</body>
+<script type="text/javascript">
+  		function vai() {
+ 		var gerarUrl = document.getElementById("entraNum").value
+ 		var mesgOpc = document.getElementById("msgOpc").value
+ 		var vaurlPta = "https://api.whatsapp.com/send?phone=55" + gerarUrl + '&text=' + mesgOpc;
+ 		window.open(vaurlPta);
+  	}
+	</script>
+</html>
