--- a/index.html
+++ b/index.html
@@ -1,132 +1,48 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-		<head>
-			<title>InfoBR</title>
-			<link rel="shortcut icon" href="icon.png">
-			<link rel="stylesheet" type="text/css" href="stilo.css">
-			<meta charset="utf-8">
-			<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		</head>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>infoBR</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 <body>
-	
-	<header class="menu">
-				<h1>InfoBR</h1>
-	</header>
-	<div class="caixaDep">
-		<a href="index.html"><div class="fixcap">Home</div></a>
-		<a href="informatica.html" class="fixcap"><div>Informática</div></a>
-		<a href="celulares.html"><div>Celulares</div></a>
-	</div>
-		<div class="agendar">
-			<img src="wallTop.png">
-		</div>
-	<section class="basec">
-		<article class="ol">
-			<script type="text/javascript">
-				function function_name() {
-					alert("Bu!");
-				}
-			</script>
-			<figure class="li">Cabo nylon i2go 2m
-				<img src="produt.png"> 
-				<a  href="" onclick="function_name()"><figcaption>CD-0001 Saber mais...</figcaption></a>
-			</figure>
-			<figure class="li">Cabo nylon i2go 2m
-				<img src="produt.png"> 
-				<a  href="" onclick="function_name()"><figcaption>CD-0002 Saber mais...</figcaption></a>
-			</figure>
-			<figure class="li">Cabo nylon i2go 2m
-				<img src="produt.png"> 
-				<a  href="" onclick="function_name()"><figcaption>CD-0003 Saber mais...</figcaption></a>
-			</figure>
-			<figure class="li">Cabo nylon i2go 2m
-				<img src="produt.png"> 
-				<a  href="" onclick="function_name()"><figcaption>CD-0004 Saber mais...</figcaption></a>
-			</figure>
-			<figure class="li">Cabo nylon i2go 2m
-				<img src="produt.png"> 
-				<a  href="" onclick="function_name()"><figcaption>CD-0005 Saber mais...</figcaption></a>
-			</figure>
-			<figure class="li">Cabo nylon i2go 2m
-				<img src="produt.png"> 
-				<a  href="" onclick="function_name()"><figcaption>CD-0006 Saber mais...</figcaption></a>
-			</figure>
-			<figure class="li">Cabo nylon i2go 2m
-				<img src="produt.png"> 
-				<a  href="" onclick="function_name()"><figcaption>CD-0001 Saber mais...</figcaption></a>
-			</figure>
-			<figure class="li">Cabo nylon i2go 2m
-				<img src="produt.png"> 
-				<a  href="" onclick="function_name()"><figcaption>CD-0002 Saber mais...</figcaption></a>
-			</figure>
-			<figure class="li">Cabo nylon i2go 2m
-				<img src="produt.png"> 
-				<a  href="" onclick="function_name()"><figcaption>CD-0003 Saber mais...</figcaption></a>
-			</figure>
-			<figure class="li">Cabo nylon i2go 2m
-				<img src="produt.png"> 
-				<a  href="" onclick="function_name()"><figcaption>CD-0004 Saber mais...</figcaption></a>
-			</figure>
-			<figure class="li">Cabo nylon i2go 2m
-				<img src="produt.png"> 
-				<a  href="" onclick="function_name()"><figcaption>CD-0005 Saber mais...</figcaption></a>
-			</figure>
-			<figure class="li">Cabo nylon i2go 2m
-				<img src="produt.png"> 
-				<a  href="" onclick="function_name()"><figcaption>CD-0006 Saber mais...</figcaption></a>
-			</figure>
-			<figure class="li">Cabo nylon i2go 2m
-				<img src="produt.png"> 
-				<a  href="" onclick="function_name()"><figcaption>CD-0001 Saber mais...</figcaption></a>
-			</figure>
-			<figure class="li">Cabo nylon i2go 2m
-				<img src="produt.png"> 
-				<a  href="" onclick="function_name()"><figcaption>CD-0002 Saber mais...</figcaption></a>
-			</figure>
-			<figure class="li">Cabo nylon i2go 2m
-				<img src="produt.png"> 
-				<a  href="" onclick="function_name()"><figcaption>CD-0003 Saber mais...</figcaption></a>
-			</figure>
-			<figure class="li">Cabo nylon i2go 2m
-				<img src="produt.png"> 
-				<a  href="" onclick="function_name()"><figcaption>CD-0004 Saber mais...</figcaption></a>
-			</figure>
-			<figure class="li">Cabo nylon i2go 2m
-				<img src="produt.png"> 
-				<a  href="" onclick="function_name()"><figcaption>CD-0005 Saber mais...</figcaption></a>
-			</figure>
-			<figure class="li">Cabo nylon i2go 2m
-				<img src="produt.png"> 
-				<a  href="" onclick="function_name()"><figcaption>CD-0006 Saber mais...</figcaption></a>
-			</figure>
-		</article>
-	</section>
-	<!--<div class="caixa">
-			<h1>Criar link para Whatsapp</h1>
-			<input type="text" id="entraNum" placeholder="(00)0 0000-0000">
-			<input type="text" id="msgOpc" placeholder="Mensagem opcional">
-			<button onclick="vai()" id="whats">Abrir</button>
-	</div>-->
-	<div class="caixaEntg">
-			<img src="wallEntg.png">
-	</div>
-	<!--<div class="caixaSob">
-			<h2>Sobre</h2>
-			<hgroup class="grupSob">
-			<img src="https://i.pinimg.com/474x/77/5b/91/775b91d4b1bfcac2aa3292b47763c1b1.jpg">
-			<p>Um wiki é um website no qual utilizadores modificam colaborativamente conteúdo e estrutura diretamente do web browser. Num wiki típico, texto é escrito com uma linguagem de marcação e frequentemente editado com a ajuda de um editor de texto enriquecido.</p>
-			</hgroup>
-	</div>-->
-	<footer>
-		<div><h2>© Alex Souza</h2></div>
-	</footer>
+    <script src="script.js"></script>
+    <header id="cabecalho">
+        <h2>infoBR</h2>
+    </header>
+    <header id="cabecalhoContra">
+        <h2>infoBR</h2>
+    </header>
+    <div id="imgSection">
+        <img src="capaTitleFooter.jpg">
+    </div>
+    <section id="sectionBase">
+        <div id='contPrinc'>
+            <div id="sobreMim">
+                <div id="txtGrup">
+                    <div id="controltxt">
+                        <h3>Alex Souza</h3>
+                        <p>Técnico em informática, e calouro em web desenvolvimento.</p>
+                    </div>
+                </div>
+                <img src="alexSouza.jpg">
+            </div>
+            <!--                              Serviços                            -->
+            <div id="servicosCx">
+                <div id='orgServcs'>
+                    <h3>Serviços</h3>
+                    <p>Suporte técnico em informática e tecnologias...</p>
+                    <ul id="insUl">
+                        <!-- Add por JS-->
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer>
+
+    </footer>
 </body>
-<script type="text/javascript">
-  		function vai() {
- 		var gerarUrl = document.getElementById("entraNum").value
- 		var mesgOpc = document.getElementById("msgOpc").value
- 		var vaurlPta = "https://api.whatsapp.com/send?phone=55" + gerarUrl + '&text=' + mesgOpc;
- 		window.open(vaurlPta);
-  	}
-	</script>
 </html>
